--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -3,6 +3,10 @@
 	padding:0;
 	font-family: sans-serif;
 }
+h1 {
+  color: #FF0000;
+  text-align: center;
+}
 .hero{
 	height: 100%;
 	width: 100%;
